--- a/build.gradle
+++ b/build.gradle
@@ -21,6 +21,7 @@ allprojects {
         google()
         jcenter()
         maven { url "https://jitpack.io" }  //Make sure to add this in your project for uCrop
+        maven { url "https://oss.jfrog.org/libs-snapshot" }// for rxAndroid3
     }
 }
 
