--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven { url "https://jitpack.io" }  //Make sure to add this in your project for uCrop
-        maven { url "https://oss.jfrog.org/libs-snapshot" }// for rxAndroid3
+        maven { url "https://jitpack.io" }  //uCrop and Photoview
+        maven { url "https://oss.jfrog.org/libs-snapshot" }// rxAndroid3
     }
 }
 
